<resources>
    <string name="all_rights_reserved" translatable="false">All Rights Reserved</string>
    <string name="na" translatable="false">N/A</string>
    <string name="title_back">Back</string>
    <string name="ok">OK</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="tips">Tips</string>
    <string name="warning">Warning</string>
    <string name="paste">Paste</string>
    <string name="modify">Apply</string>
    <string name="modifying">Modifying&#8230;</string>
    <string name="modify_succeed">Modified succeed</string>
    <string name="modify_failed">Modified failed</string>
    <string name="delete">Delete</string>
    <string name="open">Open</string>
    <string name="dialog_continue">Continue</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="connection_refused">Unable to connect to your device, Pls check the device and network status!</string>
    <string name="network_not_available">The network is not available, Pls check it!</string>
    <string name="oneos_version_mismatch">Your device version is too low, Pls upgrade to OS v5.x version!</string>
    <string name="fmt_oneos_version_upgrade" formatte="false">Your device version is too low，Pls upgrade to OS version v%s and above!</string>
    <string name="oneos_version_check_failed">Detection system version fails, Pls try again!</string>
    <string name="tips_title_version_mismatch">OS Version Mismatch</string>
    <string name="wifi_not_available">The WiFi is not available, Pls check it!</string>
    <string name="goto_settings">Settings</string>
    <string name="error_json_exception">Failed to parse protocol</string>
    <string name="operate_failed">Operation failed</string>
    <string name="app_exception">Application Exception</string>
    <string name="please_login_onespace">Pls login device</string>
    <string name="please_login_onespace_with_admin">Pls use the owner user login device</string>
    <string name="confirm_download_not_wifi">Confirm download by using non WiFi access!</string>
    <string name="confirm_upload_not_wifi">Confirm upload by using non WiFi access!</string>
    <string name="app_exception_to_exit">crashed, collecting information, exit after 3s&#8230;</string>
    <string name="press_again_to_exit">Press again to return to the desktop</string>
    <string name="tips_exit_if_has_task">You have unfinished upload/download tasks, all tasks will be interrupted if you continue to exit!</string>
    <string name="exit">Exit</string>
    <string name="loading">Loading&#8230;</string>
    <string name="all_loaded">All Loaded</string>
    <string name="failed_get_upload_file">Failed to get upload file path</string>
    <string name="perm_denied_storage">Pls grant permissions to access your external storage!</string>
    <string name="tab_device">Device</string>
    <string name="tab_file">File</string>
    <string name="tab_share">Share</string>
    <string name="tab_setting">Setting</string>
    <string name="tab_me">Me</string>
    <string name="file_type_private">My Space</string>
    <string name="file_type_public">Public Space</string>
    <string name="file_type_doc">Document</string>
    <string name="file_type_pic">Picture</string>
    <string name="file_type_audio">Audio</string>
    <string name="file_type_video">Video</string>
    <string name="file_type_cycle">Recycle Bin</string>
    <string name="file_type_download">Download</string>
    <string name="file_type_app">App</string>
    <string name="details_file">Details</string>
    <string name="open_file">Open</string>
    <string name="copy_file">Copy</string>
    <string name="move_file">Move</string>
    <string name="delete_file">Delete</string>
    <string name="rename_file">Rename</string>
    <string name="download_file">Download</string>
    <string name="upload_file">Upload</string>
    <string name="encrypt_file">Encrypt</string>
    <string name="decrypt_file">Decrypt</string>
    <string name="chmod_file">Permission</string>
    <string name="attr_file">Attribute</string>
    <string name="share_file">Share</string>
    <string name="clean_recycle_file">Clear</string>
    <string name="tip_select_file">Pls select item first</string>
    <string name="tip_attr_file">Attribute</string>
    <string name="getting_file_attr">Querying&#8230;</string>
    <string name="file_attr_path">Path：</string>
    <string name="file_attr_size">Size：</string>
    <string name="file_attr_files">Files：</string>
    <string name="file_attr_folders">Folder：</string>
    <string name="tail_file_attr_size_bytes">bytes</string>
    <string name="tail_file_attr_folders">folders</string>
    <string name="tail_file_attr_files">files</string>
    <string name="file_attr_permission">Permission：</string>
    <string name="file_attr_uid">UID：</string>
    <string name="file_attr_gid">GID：</string>
    <string name="file_attr_read">Readable：</string>
    <string name="file_attr_write">Writable：</string>
    <string name="file_attr_time">Time：</string>
    <string name="tip_chmod_file">File Permission</string>
    <string name="chmod_file_group">Group User：</string>
    <string name="chmod_file_other">Other User：</string>
    <string name="permission_read">Readable</string>
    <string name="permission_write">Writable</string>
    <string name="tip_delete_file">Confirm to delete the selected file?</string>
    <string name="deleting_file">Deleting_file&#8230;</string>
    <string name="delete_file_success">Delete succeed</string>
    <string name="delete_file_failed">Delete failed</string>
    <string name="renaming_file">Renaming&#8230;</string>
    <string name="tip_rename_file">Rename File</string>
    <string name="hint_rename_file">Pls enter a new file name</string>
    <string name="rename_file_success">Rename succeed</string>
    <string name="rename_file_failed">Rename failed</string>
    <string name="making_folder">Creating&#8230;</string>
    <string name="tip_new_folder">Create folder</string>
    <string name="hint_new_folder">Pls enter a folder name</string>
    <string name="default_new_folder">New folder</string>
    <string name="new_folder_success">Create succeed</string>
    <string name="new_folder_failed">Create failed</string>
    <string name="encrypting_file">Encrypting&#8230;</string>
    <string name="tip_encrypt_file">Encrypt file</string>
    <string name="warning_encrypt_file">Warning: Pls remember the password, otherwise it will not be able to decrypt the file!</string>
    <string name="hint_encrypt_pwd">Pls enter password</string>
    <string name="hint_confirm_encrypt_pwd">Pls confirm password</string>
    <string name="error_confirm_pwd">Password does not match</string>
    <string name="encrypt_file_success">File encryption succeed</string>
    <string name="encrypt_file_failed">File encryption failed</string>
    <string name="decrypting_file">Decrypting&#8230;</string>
    <string name="tip_decrypt_file">Decrypt file </string>
    <string name="hint_decrypt_pwd">Pls enter password</string>
    <string name="decrypt_file_success">File decryption succeed</string>
    <string name="decrypt_file_failed">File decryption failed</string>
    <string name="tip_move_file">Move to </string>
    <string name="moving_file">Moving&#8230;</string>
    <string name="chmod_ing_file">Modifying&#8230;</string>
    <string name="tip_upload_file">Upload to </string>
    <string name="upload_file_success">Upload file succeed</string>
    <string name="move_file_success">Move file succeed</string>
    <string name="move_file_failed">Move file failed</string>
    <string name="tip_copy_file">Paste to </string>
    <string name="copying_file">Pasting&#8230;</string>
    <string name="copy_file_success">Paste file succeed</string>
    <string name="copy_file_failed">Paste file failed</string>
    <string name="title_clean_recycle_file">Clean Recycle Bin</string>
    <string name="tip_clean_recycle_file">All files will be permanently deleted if you clean the recycle bin</string>
    <string name="cleaning_recycle">Cleaning&#8230;</string>
    <string name="chmod_file_success">Modify permission succeed</string>
    <string name="clean_recycle_success">Clean recycle bin succeed</string>
    <string name="clean_recycle_failed">Clean recycle bin failed</string>
    <string name="share_file_success">Share succeed</string>
    <string name="clean_now">Clean</string>
    <string name="nav_title_local">Local</string>
    <string name="nav_title_cloud">Station</string>
    <string name="nav_title_transfer">Transfer</string>
    <string name="nav_title_tool">Tools</string>
    <string name="nav_title_recent">Recently</string>
    <string name="title_login">M3 Station Login</string>
    <string name="login">Login</string>
    <string name="title_enter_user">Username</string>
    <string name="title_enter_pwd">Password</string>
    <string name="title_select_ip">IP</string>
    <string name="title_enter_port">Port</string>
    <string name="hint_enter_user">Pls enter username</string>
    <string name="hint_enter_pwd">Pls enter password</string>
    <string name="hint_select_ip">Pls enter device IP address</string>
    <string name="hint_enter_port">Pls enter device port</string>
    <string name="tip_invalid_port">Pls enter a valid port</string>
    <string name="logining">Logining&#8230;</string>
    <string name="scanning_device">Search Device&#8230;</string>
    <string name="tip_title_research">Search Device</string>
    <string name="tip_search_again">Device not found, Search again?</string>
    <string name="research_now">Research</string>
    <string name="getting_device_mac">Getting Mac&#8230;</string>
    <string name="error_get_device_mac">Get device Mac address failed, Pls try to login again</string>
    <string name="error_login_user_or_pwd">Incorrect username or password</string>
    <string name="remote_login">Remote Access</string>
    <string name="tip_title_bond_ssudp">Bind SSUDP？</string>
    <string name="tip_bond_ssudp">After binding, you can access device using SSUDP</string>
    <string name="binding">Binding&#8230;</string>
    <string name="ssudp_connecting">Connecting&#8230;</string>
    <string name="bind_now">Bind Now</string>
    <string name="bind_succeed">Bind Succeed</string>
    <string name="bind_failed">Bind Failed</string>
    <string name="tip_title_bond_ssudp_failed">SSUDP Bind Failed</string>
    <string name="tip_title_connect_ssudp_failed">Connect device Failed</string>
    <string name="tip_bond_ssudp_failed">Your device does not support SSUDP, Pls contact the official technical support!</string>
    <string name="hint_select_file">Pls select file</string>
    <string name="select_all">Select All</string>
    <string name="clear_failed_task">Clear failed tasks</string>
    <string name="clear_running_task">Clear ongoing tasks</string>
    <string name="aria_task_details">Task Details</string>
    <string name="download">Download</string>
    <string name="paused">Paused</string>
    <string name="install">Install</string>
    <string name="tips_upgrade_oneos"><![CDATA[The device system is being upgraded. Do not power off the device. The upgrade program will restart automatically after installation. If the automatic restart fails, please restart it manually (Details->Settings ).]]></string>
    <string name="share_file_period">Effective:</string>
    <string name="download_counter">Downloadable:</string>
    <string name="setup_share_config">SetSharingParams</string>
    <string name="day">Day</string>
    <string name="times">Times</string>
    <string name="hint_download_counter_des">Default 1,set 0 to unlimited</string>
    <string name="hint_share_period_des">Limited to 1–7</string>
    <string name="_private">Private</string>
    <string name="_public">Public</string>
</resources>