<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/clear_failed"
        style="@style/StyleDialogDesTvBtn"
        android:layout_height="48dp"
        android:text="@string/clear_failed_task" />

    <include layout="@layout/include_line" />

    <TextView
        android:id="@+id/clear_all"
        style="@style/StyleDialogDesTvBtn"
        android:layout_height="48dp"
        android:text="@string/clear_running_task" />


    <include
        layout="@layout/include_line"
        android:layout_width="match_parent"
        android:layout_height="6dp" />

    <TextView
        android:id="@+id/cancel"
        style="@style/StyleDialogTvBtn"
        android:layout_height="48dp"
        android:text="@string/cancel" />
</LinearLayout>