<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_device_white"
    android:orientation="vertical">


    <TextView
        android:id="@+id/start_tv"
        android:layout_width="100dp"
        android:layout_height="@dimen/common_48"
        android:gravity="center"
        android:textColor="@color/black_a85"
        android:text="@string/start" />

    <TextView
        android:id="@+id/pause_tv"
        android:layout_width="100dp"
        android:layout_height="@dimen/common_48"
        android:gravity="center"
        android:textColor="@color/black_a85"
        android:text="@string/paused" />

    <TextView
        android:id="@+id/detail_tv"
        android:layout_width="100dp"
        android:layout_height="@dimen/common_48"
        android:gravity="center"
        android:text="@string/aria_task_details"
        android:visibility="gone"
        android:textColor="@color/black_a85"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/delete_tv"
        android:layout_width="100dp"
        android:layout_height="@dimen/common_48"
        android:textColor="@color/black_a85"
        android:gravity="center"
        android:text="@string/delete" />

</LinearLayout>