<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_upgrade_progress"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/color_bg_grey50"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/common_16"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:drawableStart="@drawable/ic_warn_yellow_24dp"
        android:gravity="center"
        android:text="@string/tips_upgrade_oneos" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/progressBar_download"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_16"
        android:max="100"
        android:progressDrawable="@drawable/progress_horizontal_material" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_16"
        android:text="@string/install"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/progressBar_install"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_16"
        android:max="100"
        android:progressDrawable="@drawable/progress_horizontal_material" />
</LinearLayout>