<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_file_select"
    android:layout_width="match_parent"
    android:layout_height="@dimen/layout_title_height"
    android:gravity="center"
    tools:background="@drawable/bg_title_bar_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_select_cancel"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="@dimen/text_size_sm"
            android:autoSizeMinTextSize="1sp"
            android:autoSizeTextType="uniform"
            android:background="@drawable/bg_ripple_trans_gray"
            android:gravity="center"
            android:maxLines="1"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/title_text_color"
            app:autoSizeMaxTextSize="@dimen/text_size_sm"
            app:autoSizeMinTextSize="1sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/text_count"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:autoSizeMaxTextSize="@dimen/text_size_title"
            android:autoSizeMinTextSize="1sp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:maxLines="1"
            android:padding="8dp"
            android:text="@string/hint_select_file"
            android:textAllCaps="false"
            android:textColor="@color/title_text_color"
            app:autoSizeMaxTextSize="@dimen/text_size_title"
            app:autoSizeMinTextSize="1sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/btn_select_all"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_ripple_trans_gray"
            android:gravity="center"
            android:text="@string/select_all"
            android:textAllCaps="false"
            android:textColor="@color/title_text_color"
            android:textSize="@dimen/text_size_sm" />


    </LinearLayout>
</RelativeLayout>