<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg_grey50">

    <include
        android:id="@+id/title_bar"
        layout="@layout/include_title_bar"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/icon_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/icon_apply_logon_dev"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_bar"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintWidth_percent="0.56" />

    <TextView
        android:id="@+id/tv_operator_tips"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:padding="12dp"
        android:textColor="@color/text_dark_gray"
        android:textSize="@dimen/txt_13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_view"
        tools:text="@string/na" />

    <TextView
        android:id="@+id/tv_confirm"
        style="@style/Style_btn_bg_primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:minEms="6"
        android:padding="12dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_operator_tips"
        app:layout_constraintWidth_percent="0.372" />

    <TextView
        android:id="@+id/tv_cancel"
        style="@style/Style_btn_bg_disable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:minEms="6"
        android:padding="12dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_confirm"
        app:layout_constraintWidth_percent="0.372" />


</androidx.constraintlayout.widget.ConstraintLayout>